objects/Change_Control_Effectiveness_Check__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Control_Effectiveness_CheckcCMPL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Control</label>
        <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
        <relationshipName>Change_Control_Effectiveness_Check</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Change Control Effectiveness Check</label>
    <nameField>
        <displayFormat>CC-EC-{0000}</displayFormat>
        <label>Change Control Effectiveness Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Control Effectiveness Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Prevent_create_and_edit</fullName>
        <active>false</active>
        <errorConditionFormula>Change_Control__r.CMPL123_WF_Status__c = "Closed - Change Control"</errorConditionFormula>
        <errorMessage>Cannot add/edit after change control has been closed</errorMessage>
    </validationRules>
</CustomObject>